add: publishNonDefault true

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,6 +36,7 @@ if (project.hasProperty("distCommon4jVersion") && project.distCommon4jVersion !=
 }
 
 android {
+    publishNonDefault true
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
