--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ allprojects {
                 password project.vstsPassword
             }
         }
+        maven { url 'https://jitpack.io' }
     }
 
     dependencyLocking {
