--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${rootProject.ext.gradleVersion}"
+        classpath "com.android.tools.build:gradle:$gradleVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
